<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chicago_skyline_479837006"
    tools:context="com.example.zialestate.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/big_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/streetaddress"
            android:paddingTop="10dp"
            android:text="@string/address"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@layout/rounded_edittext"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/streetaddress"
            android:inputType="text"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/error_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FF0000"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/city"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@layout/rounded_edittext"
            android:ems="10"
            android:hint="@string/cityhint"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/error_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FF0000"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/state"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:background="@layout/rounded_edittext"
            android:entries="@array/country_arrays"
            android:padding="10dp"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/error_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FF0000"
            android:visibility="invisible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:onClick="callAWS" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="88dp"
                android:layout_toRightOf="@+id/button1"
                android:paddingTop="10dp"
                android:src="@drawable/zillowlogo" />

        </RelativeLayout>
	
        <View
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:layout_marginTop="10dp"
		android:background="#FFFFFF"
		/>
        
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/error_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:visibility="invisible" />
    
    </LinearLayout>
    
    

</FrameLayout>

